--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,8 @@
 image: Visual Studio 2017
 
 build:
-  project: WoA Installer.sln
+  project: "WoA Installer.sln"
+
+artifacts:
+    - path: bin\Release\*.*
+      name: $(APPVEYOR_PROJECT_NAME)
